revised paths so general and less tedious; added an ACAD source script, so don't have to tweak the NETN one as much for ACAD.; added report_year and park to params in YAML so easier to find and overwrite by render; fixed a couple of typos and code cleanup

--- a/ASIS_figures_and_tables.Rmd
+++ b/ASIS_figures_and_tables.Rmd
@@ -8,6 +8,8 @@ output:
     #includes:
       #in_header: "header_MIDN.html"
       #after_body: "footer.html"
+params:
+  report_year: 2024 # year report was generated for
 ---
 ```{r setup, include = FALSE, results = 'hide'}
 # NOTE: Once ASIS has started a second cycle, you should be able to transition to the MIDN-level summaries.
@@ -33,7 +35,10 @@ library(vegan)
 ```{r}
 # assign params to global env. for source files to find. Makes iterating easier.
 park <<- "ASIS" #assigns to global env. so easier for later code to find
-path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' 
+report_year <- params$report_year
+path <<- paste0('./output/', report_year, "/MIDN/")
+
+
 #path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
 midn_names <- read.csv("MIDN_MetaData.csv")
 midn_params <- read.csv("MIDN_params.csv") # !!!! MUST UPDATE EVERY YEAR !!!!
@@ -75,7 +80,7 @@ save_html(html_header, "html_header.html")
 ```
 
 ```{r include = F, cache = F}
-source('source_script_ASIS.R') # sets up parameters. Can also run all the scripts below, but turned off for easier troubleshooting.
+source('source_script_ASIS.R') # sets up parameters. 
 ```
 ```{r include = F, cache = F}
 source('./scripts/forest_summary_code_ASIS.R') # main figures and tables
@@ -261,7 +266,7 @@ includeHTML("html_header.html")
 ```
 <br>
 ```{r out.width = "45%", out.height = "40%", out.extra = 'style="margin-left:130px; margin-top:-10px;"'}
-include_graphics(paste0(new_path, "figures/Figure_1_Regen_Debt_table.png"))
+include_graphics(paste0(new_path, "figures/Figure_1_", park, "_Regen_Debt_table.png"))
 ```
 
 ```{r results = 'asis'}
